--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
                 <img src="img/logo.png" alt="">
             </div>
             <nav>
-                <a href="#">Home</a>
+                <a href="/">Home</a>
                 <a href="/produtos">Produtos</a>
                 <a href="/sobre">Sobre</a>
                 <a href="/contato">Contato</a>
