--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -4,5 +4,6 @@
         <h3>Produto: {{this.title}}</h3>
         <p>Descrição {{this.description}}</p>
         <h4>R$ {{this.value}}</h4>
+        <a href="/prod/{{this.id}}">Detalhe</a>
     </div>
 </section>
